[package]
name = "guess_from_m1m2_to_abundance"
version = "0.1.0"
authors = ["malibu-cola <ryhrys4269@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.0.0-beta.1"
serde_derive = "1.0.148"
serde = "1.0.97"
glob = "0.3.0"
regex = "1.7.0"